@@ -131,6 +131,7 @@ sub process_accounting_rule( $$$$$$$$$ ) {
 			    $source ,
 			    $dest = ALLIPv4 ,
 			    '' ,
+			    '' ,
 			    $target ,
 			    '' ,
 			    $disposition ,
@@ -151,6 +152,7 @@ sub process_accounting_rule( $$$$$$$$$ ) {
 	$source ,
 	$dest ,
 	'' ,
+	'' ,
 	$target ,
 	'' ,
 	$disposition ,
@@ -163,6 +165,7 @@ sub process_accounting_rule( $$$$$$$$$ ) {
 	    $rule ,
 	    $source ,
 	    $dest ,
+	    '' ,
 	    '' ,
 	    '' ,
 	    '' ,
