@@ -294,6 +294,7 @@ sub process_tc_rule( $$$$$$$$$$$$ ) {
 				     $source ,
 				     $dest ,
 				     '' ,
+				     '' ,
 				     "-j $target $mark" ,
 				     '' ,
 				     '' ,
