@@ -90,7 +90,7 @@ Problems corrected in Shorewall 4.2.1
 
 3)  iptables 1.4.1 discontinued support of syntax generated by
     shorewall in some cases. Shorewall now detects when the new syntax
-    is accepted and uses it instead.
+    is required and uses it instead.
 
 4)  The Shorewall-perl implementation of the LENGTH column in
     /etc/shorewall/tcrules was incomplete with the result that 
@@ -169,6 +169,16 @@ Other changes in Shorewall 4.2.1
     2)  datestart=2008-11-01T12:00
 
         Beginning November 1, 2008 at noon LCT.
+
+3)  If your kernel and iptables support "-m conntrack --ctorigdstport"
+    then Shorewall will utilize that capability to ensure that when you
+    do port mapping (change the destination port but not the
+    destination IP address), the final destination port is not open.
+
+    To use this feature, you must be running Shorewall-perl and the
+    output of 'shorewall show capabilities' must show:
+
+       Extended Connection Tracking Match Support: Available
 
 New Features in Shorewall 4.2.
 
