@@ -12,4 +12,6 @@ Changes in Shorewall 4.2.1
 
 6) Applied Lennart Sorensen's patch for length match.
 
+7) Take advantage --ctorigdstport
+
 Initial release of Shorewall 4.2.0.
